@@ -45,6 +45,8 @@ Version 1.7.7
        before closing it. (Stefan)
 - BUG: Issue #255: inconsistent unicode
        conversion. (Stefan)
+- BUG: Issue #256: merge automation for tree
+       and reintegrate fails. (Stefan)
 
 Version 1.7.6
 - BUG: Issue #209: repo browser doesn't
